@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: oo.test,v 1.43 2009/02/12 09:30:06 dkf Exp $
+# RCS: @(#) $Id: oo.test,v 1.44 2009/03/24 10:53:23 dkf Exp $
 
 package require TclOO 0.6.1 ;# Must match value in configure.in
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -967,6 +967,20 @@ test oo-13.3 {OO: changing an object's class} -body {
 } -cleanup {
     foo destroy
 } -returnCodes 1 -result {may not change a class object into a non-class object}
+test oo-13.4 {OO: changing an object's class} -body {
+    oo::class create foo {
+ 	method m {} {
+ 	    set result [list [self class] [info object class [self]]]
+ 	    oo::objdefine [self] class ::bar
+ 	    lappend result [self class] [info object class [self]]
+ 	}
+    }
+    oo::class create bar
+    [foo new] m
+} -cleanup {
+    foo destroy
+    bar destroy
+} -result {::foo ::foo ::foo ::bar}
 # todo: changing a class subtype (metaclass) to another class subtype
 
 test oo-14.1 {OO: mixins} {
@@ -2118,6 +2132,17 @@ test oo-28.1 {scripted extensions to oo::define} -setup {
 	list [catch {obj m 1 2}] [obj eval my m 3 4]
     }
 } -result {1 3,4}
+
+test oo-29.1 {self class with object-defined methods} -setup {
+    oo::object create obj
+} -body {
+    oo::objdefine obj method demo {} {
+ 	self class
+    }
+    obj demo
+} -returnCodes error -cleanup {
+    obj destroy
+} -result {method not defined by a class}
 
 cleanupTests
 return
